circuitry/gen/CircuitryParser.py
# Generated from ../grammar/CircuitryParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CircuitryParser ( Parser ):

    grammarFileName = "CircuitryParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'.'", "'->'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", "'++'", 
                     "'--'", "'&&'", "'||'", "'!'", "';'", "':'", "','", 
                     "'alias'", "'let'", "'fn'", "'return'", "'series'", 
                     "'parallel'", "'reversed'", "'subcircuit'", "'import'", 
                     "'if'", "'else'", "'for'", "'while'", "'do'", "'break'", 
                     "'continue'", "'switch'", "'case'", "'default'", "'true'", 
                     "'false'", "'transient'", "'ac'", "'dc'", "'measure'", 
                     "'pos'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACKET", "RBRACKET", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "MODULO", "EXPONENT", "DOT", "RARROW", "EQUAL", 
                      "NOT_EQUAL", "LESS", "GREATER", "LESS_EQUAL", "GREATER_EQUAL", 
                      "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "EXP_ASSIGN", "INC", "DEC", 
                      "AND", "OR", "NOT", "SEMICOLON", "COLON", "COMMA", 
                      "ALIAS", "LET", "FN", "RETURN", "SERIES", "PARALLEL", 
                      "REVERSED", "SUBCIRCUIT", "IMPORT", "IF", "ELSE", 
                      "FOR", "WHILE", "DO", "BREAK", "CONTINUE", "SWITCH", 
                      "CASE", "DEFAULT", "TRUE", "FALSE", "TRANSIENT", "AC", 
                      "DC", "MEASURE", "POS", "FLOAT_LITERAL", "STRING_LITERAL", 
                      "ID", "LINE_COMMENT", "MULTILINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_importStatement = 1
    RULE_topologyStatement = 2
    RULE_aliasStatement = 3
    RULE_aliasAssignment = 4
    RULE_letStatement = 5
    RULE_letAssignment = 6
    RULE_componentStatement = 7
    RULE_componentType = 8
    RULE_nodeList = 9
    RULE_nodeMapping = 10
    RULE_dottedNode = 11
    RULE_seriesStatement = 12
    RULE_nestedSeriesStatement = 13
    RULE_seriesBody = 14
    RULE_seriesElement = 15
    RULE_seriesAssignment = 16
    RULE_parallelStatement = 17
    RULE_nestedParallelStatement = 18
    RULE_parallelBody = 19
    RULE_parallelElement = 20
    RULE_parallelAssignment = 21
    RULE_assignmentStatement = 22
    RULE_unaryAssignmentOperator = 23
    RULE_binaryAssignmentOperator = 24
    RULE_expr = 25
    RULE_functionCall = 26
    RULE_functionCallArgs = 27
    RULE_functionCallKeywordArg = 28
    RULE_functionCallPositionalArg = 29
    RULE_conditionWithBlock = 30
    RULE_booleanExpr = 31
    RULE_ifStatement = 32
    RULE_relationalOperator = 33
    RULE_whileStatement = 34
    RULE_doWhileStatement = 35
    RULE_forStatement = 36
    RULE_forInit = 37
    RULE_forUpdate = 38
    RULE_switchStatement = 39
    RULE_caseStatement = 40
    RULE_defaultStatement = 41
    RULE_functionDefinition = 42
    RULE_functionParams = 43
    RULE_functionParam = 44
    RULE_functionBody = 45
    RULE_returnStatement = 46
    RULE_subcircuitDefinition = 47
    RULE_subcircuitParams = 48
    RULE_subcircuitParam = 49
    RULE_simulationStatement = 50
    RULE_simulationType = 51
    RULE_measurementStatement = 52
    RULE_drawingStatement = 53

    ruleNames =  [ "program", "importStatement", "topologyStatement", "aliasStatement", 
                   "aliasAssignment", "letStatement", "letAssignment", "componentStatement", 
                   "componentType", "nodeList", "nodeMapping", "dottedNode", 
                   "seriesStatement", "nestedSeriesStatement", "seriesBody", 
                   "seriesElement", "seriesAssignment", "parallelStatement", 
                   "nestedParallelStatement", "parallelBody", "parallelElement", 
                   "parallelAssignment", "assignmentStatement", "unaryAssignmentOperator", 
                   "binaryAssignmentOperator", "expr", "functionCall", "functionCallArgs", 
                   "functionCallKeywordArg", "functionCallPositionalArg", 
                   "conditionWithBlock", "booleanExpr", "ifStatement", "relationalOperator", 
                   "whileStatement", "doWhileStatement", "forStatement", 
                   "forInit", "forUpdate", "switchStatement", "caseStatement", 
                   "defaultStatement", "functionDefinition", "functionParams", 
                   "functionParam", "functionBody", "returnStatement", "subcircuitDefinition", 
                   "subcircuitParams", "subcircuitParam", "simulationStatement", 
                   "simulationType", "measurementStatement", "drawingStatement" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    LBRACE=3
    RBRACE=4
    LBRACKET=5
    RBRACKET=6
    PLUS=7
    MINUS=8
    MULTIPLY=9
    DIVIDE=10
    MODULO=11
    EXPONENT=12
    DOT=13
    RARROW=14
    EQUAL=15
    NOT_EQUAL=16
    LESS=17
    GREATER=18
    LESS_EQUAL=19
    GREATER_EQUAL=20
    ASSIGN=21
    ADD_ASSIGN=22
    SUB_ASSIGN=23
    MUL_ASSIGN=24
    DIV_ASSIGN=25
    MOD_ASSIGN=26
    EXP_ASSIGN=27
    INC=28
    DEC=29
    AND=30
    OR=31
    NOT=32
    SEMICOLON=33
    COLON=34
    COMMA=35
    ALIAS=36
    LET=37
    FN=38
    RETURN=39
    SERIES=40
    PARALLEL=41
    REVERSED=42
    SUBCIRCUIT=43
    IMPORT=44
    IF=45
    ELSE=46
    FOR=47
    WHILE=48
    DO=49
    BREAK=50
    CONTINUE=51
    SWITCH=52
    CASE=53
    DEFAULT=54
    TRUE=55
    FALSE=56
    TRANSIENT=57
    AC=58
    DC=59
    MEASURE=60
    POS=61
    FLOAT_LITERAL=62
    STRING_LITERAL=63
    ID=64
    LINE_COMMENT=65
    MULTILINE_COMMENT=66
    WS=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CircuitryParser.EOF, 0)

        def importStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircuitryParser.ImportStatementContext)
            else:
                return self.getTypedRuleContext(CircuitryParser.ImportStatementContext,i)


        def topologyStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircuitryParser.TopologyStatementContext)
            else:
                return self.getTypedRuleContext(CircuitryParser.TopologyStatementContext,i)


        def measurementStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircuitryParser.MeasurementStatementContext)
            else:
                return self.getTypedRuleContext(CircuitryParser.MeasurementStatementContext,i)


        def simulationStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircuitryParser.SimulationStatementContext)
            else:
                return self.getTypedRuleContext(CircuitryParser.SimulationStatementContext,i)


        def drawingStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircuitryParser.DrawingStatementContext)
            else:
                return self.getTypedRuleContext(CircuitryParser.DrawingStatementContext,i)


        def getRuleIndex(self):
            return CircuitryParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CircuitryParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 108
                self.importStatement()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 36)) & ~0x3f) == 0 and ((1 << (_la - 36)) & 268516023) != 0):
                self.state = 114
                self.topologyStatement()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==60:
                self.state = 120
                self.measurementStatement()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1008806316530991104) != 0):
                self.state = 126
                self.simulationStatement()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==61:
                self.state = 132
                self.drawingStatement()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(CircuitryParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(CircuitryParser.IMPORT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CircuitryParser.ID)
            else:
                return self.getToken(CircuitryParser.ID, i)

        def SEMICOLON(self):
            return self.getToken(CircuitryParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CircuitryParser.COMMA)
            else:
                return self.getToken(CircuitryParser.COMMA, i)

        def getRuleIndex(self):
            return CircuitryParser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = CircuitryParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(CircuitryParser.IMPORT)
            self.state = 141
            self.match(CircuitryParser.ID)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 142
                self.match(CircuitryParser.COMMA)
                self.state = 143
                self.match(CircuitryParser.ID)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(CircuitryParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopologyStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aliasStatement(self):
            return self.getTypedRuleContext(CircuitryParser.AliasStatementContext,0)


        def letStatement(self):
            return self.getTypedRuleContext(CircuitryParser.LetStatementContext,0)


        def componentStatement(self):
            return self.getTypedRuleContext(CircuitryParser.ComponentStatementContext,0)


        def seriesStatement(self):
            return self.getTypedRuleContext(CircuitryParser.SeriesStatementContext,0)


        def parallelStatement(self):
            return self.getTypedRuleContext(CircuitryParser.ParallelStatementContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(CircuitryParser.AssignmentStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(CircuitryParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(CircuitryParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(CircuitryParser.DoWhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(CircuitryParser.ForStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(CircuitryParser.SwitchStatementContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(CircuitryParser.FunctionDefinitionContext,0)


        def subcircuitDefinition(self):
            return self.getTypedRuleContext(CircuitryParser.SubcircuitDefinitionContext,0)


        def getRuleIndex(self):
            return CircuitryParser.RULE_topologyStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopologyStatement" ):
                listener.enterTopologyStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopologyStatement" ):
                listener.exitTopologyStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopologyStatement" ):
                return visitor.visitTopologyStatement(self)
            else:
                return visitor.visitChildren(self)




    def topologyStatement(self):

        localctx = CircuitryParser.TopologyStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_topologyStatement)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.aliasStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.letStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 153
                self.componentStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 154
                self.seriesStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 155
                self.parallelStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 156
                self.assignmentStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 157
                self.ifStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 158
                self.whileStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 159
                self.doWhileStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 160
                self.forStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 161
                self.switchStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 162
                self.functionDefinition()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 163
                self.subcircuitDefinition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALIAS(self):
            return self.getToken(CircuitryParser.ALIAS, 0)

        def aliasAssignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircuitryParser.AliasAssignmentContext)
            else:
                return self.getTypedRuleContext(CircuitryParser.AliasAssignmentContext,i)


        def SEMICOLON(self):
            return self.getToken(CircuitryParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CircuitryParser.COMMA)
            else:
                return self.getToken(CircuitryParser.COMMA, i)

        def getRuleIndex(self):
            return CircuitryParser.RULE_aliasStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAliasStatement" ):
                listener.enterAliasStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAliasStatement" ):
                listener.exitAliasStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAliasStatement" ):
                return visitor.visitAliasStatement(self)
            else:
                return visitor.visitChildren(self)




    def aliasStatement(self):

        localctx = CircuitryParser.AliasStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_aliasStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(CircuitryParser.ALIAS)
            self.state = 167
            self.aliasAssignment()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 168
                self.match(CircuitryParser.COMMA)
                self.state = 169
                self.aliasAssignment()
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 175
            self.match(CircuitryParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CircuitryParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(CircuitryParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(CircuitryParser.ExprContext,0)


        def getRuleIndex(self):
            return CircuitryParser.RULE_aliasAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAliasAssignment" ):
                listener.enterAliasAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAliasAssignment" ):
                listener.exitAliasAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAliasAssignment" ):
                return visitor.visitAliasAssignment(self)
            else:
                return visitor.visitChildren(self)




    def aliasAssignment(self):

        localctx = CircuitryParser.AliasAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_aliasAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(CircuitryParser.ID)
            self.state = 178
            self.match(CircuitryParser.ASSIGN)
            self.state = 179
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CircuitryParser.LET, 0)

        def letAssignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CircuitryParser.LetAssignmentContext)
            else:
                return self.getTypedRuleContext(CircuitryParser.LetAssignmentContext,i)


        def SEMICOLON(self):
            return self.getToken(CircuitryParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CircuitryParser.COMMA)
            else:
                return self.getToken(CircuitryParser.COMMA, i)

        def getRuleIndex(self):
            return CircuitryParser.RULE_letStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStatement" ):
                listener.enterLetStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStatement" ):
                listener.exitLetStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStatement" ):
                return visitor.visitLetStatement(self)
            else:
                return visitor.visitChildren(self)




    def letStatement(self):

        localctx = CircuitryParser.LetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_letStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(CircuitryParser.LET)
            self.state = 182
            self.letAssignment()
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 183
                self.match(CircuitryParser.COMMA)
                self.state = 184
                self.letAssignment()
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 190
            self.match(CircuitryParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CircuitryParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(CircuitryParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(CircuitryParser.ExprContext,0)


        def getRuleIndex(self):
            return CircuitryParser.RULE_letAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetAssignment" ):
                listener.enterLetAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetAssignment" ):
                listener.exitLetAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetAssignment" ):
                return visitor.visitLetAssignment(self)
            else:
                return visitor.visitChildren(self)




    def letAssignment(self):

        localctx = CircuitryParser.LetAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_letAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(CircuitryParser.ID)
            self.state = 193
            self.match(CircuitryParser.ASSIGN)
            self.state = 194
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def componentType(self):
            return self.getTypedRuleContext(CircuitryParser.ComponentTypeContext,0)


        def ID(self):
            return self.getToken(CircuitryParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(CircuitryParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(CircuitryParser.ExprContext,0)


        def COLON(self):
            return self.getToken(CircuitryParser.COLON, 0)

        def nodeList(self):
            return self.getTypedRuleContext(CircuitryParser.NodeListContext,0)


        def SEMICOLON(self):
            return self.getToken(CircuitryParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CircuitryParser.RULE_componentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponentStatement" ):
                listener.enterComponentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponentStatement" ):
                listener.exitComponentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponentStatement" ):
                return visitor.visitComponentStatement(self)
            else:
                return visitor.visitChildren(self)




    def componentStatement(self):
